Penambahan halaman about us
Kustomisasi landing page dan penambahan about us

--- a/index.html
+++ b/index.html
@@ -6,15 +6,20 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="style.css" />
     <title>PhonePicker.</title>
+    <script
+      src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.11.4/gsap.min.js"
+      defer
+    ></script>
+    <script src="script.js" defer></script>
   </head>
   <body>
     <main class="container">
       <nav class="navbar">
         <div class="brand">PhonePicker.</div>
         <div class="link">
-          <a href="#">home</a>
+          <a href="index.html">home</a>
           <a href="#">service</a>
-          <a href="#">about us</a>
+          <a href="aboutus.html">about us</a>
         </div>
       </nav>
       <div class="web-description">
